# DrHeaderPlus

./: .gitignore  CLI.md  CONTRIBUTING.md  HISTORY.md  Makefile  README.md  RULES.md  SECURITY.md  context7.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: pull_request.yml  release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  usage.rst
drheader/: __init__.py  core.py  report.py  utils.py
drheader/cli/: cli.py  utils.py
drheader/resources/: delimiters.json  rules.yml  rules_asvs_v14.yml
drheader/validators/: base.py  cookie_validator.py  directive_validator.py  header_validator.py
skills/drheaderplus-audit/: SKILL.md
skills/drheaderplus-audit/scripts/: scan.sh  scan_bulk.py
tests/integration_tests/: test_asvs_preset.py  test_cli.py  test_drheader.py  test_rules.py  utils.py
tests/test_resources/: custom_rules_merged.yml  default_rules.yml  headers_ok.json  report.json
tests/unit_tests/: test_cli.py  test_utils.py  test_validators.py
